# vale-requirements-writing

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .vale.ini  .yamllint.yaml  .yamllintignore  Justfile  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
styles/RequirementsWriting/: Abbreviations.yml  Absolutes.yml  AcronymDefinitions.yml  ActiveVoice.yml  Combinators.yml  ConsistentTerms.yml  DefiniteArticles.yml  EscapeClauses.yml  LogicalExpressions.yml  ObliqueSymbol.yml  OpenEndedClauses.yml  Parentheses.yml  Pronouns.yml  PurposePhrases.yml  Repetition.yml  SolutionFree.yml  Spelling.yml  SuperfluousInfinitives.yml  TemporalDependencies.yml  UniversalQuantification.yml  UseOfNot.yml  VagueTerms.yml
styles/config/vocabularies/requirements-writing/: accept.txt
tests/: .vale.ini  requirements.md  spelling.md
